--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>The Practicum: A Test Of Skill</title>
+<!-- Linking html to css style sheet -->
+
+<Link href="css/style.css" rel="stylesheet">
 
     <!-- You may not edit below this line. -->
   </head>
