--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
       <figure id="cryptogram">
         <!-- You may not edit above this line. -->
 
+<img src="img/cryptogram.png" alt="crpytogram">
+<figcaption> The mysterious runic cryptogram</figcaption>
+
         <!-- You may not edit below this line. -->
       </figure>
 
