Basic Structure Complete

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <p>
         Journey to the Center of the Earth (or
-        <span lang="fr">Voyage au centre de la Terre</span> in its original
+        <span lang="fr" class="nonenglish">Voyage au centre de la Terre</span> in its original
         French) is an 1864 science fiction novel by Jules Gabriel Verne, and is
         considered an exemplar of the genre of subterranean fiction. The story
         involves German professor
