Visual Style Complete

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>The Practicum: A Test Of Skill</title>
+    <div class="hero-image">
 <!-- Linking html to css style sheet -->
 
 <Link href="css/style.css" rel="stylesheet">
@@ -35,7 +35,7 @@
 
       <p>
         Journey to the Center of the Earth (or
-        <span lang="fr" class="nonenglish">Voyage au centre de la Terre</span> in its original
+        <span lang="fr">Voyage au centre de la Terre</span> in its original
         French) is an 1864 science fiction novel by Jules Gabriel Verne, and is
         considered an exemplar of the genre of subterranean fiction. The story
         involves German professor
@@ -109,6 +109,7 @@
 
 <img src="img/cryptogram.png" alt="crpytogram">
 <figcaption> The mysterious runic cryptogram</figcaption>
+
 
         <!-- You may not edit below this line. -->
       </figure>
